--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,7 @@
 	path = x265
 	url = https://bitbucket.org/multicoreware/x265_git.git
     ignore = dirty
+[submodule "zlib"]
+	path = zlib
+	url = https://github.com/madler/zlib.git
+    ignore = dirty
